--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .ts,.tsx ./ --fix"
   },
   "dependencies": {
-    "expo": "~36.0.0",
+    "expo": "^36.0.2",
+    "expo-font": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
